--- a/index.html
+++ b/index.html
@@ -9,106 +9,80 @@
             font-family: Arial, sans-serif;
             margin: 0;
             padding: 0;
-            background-color: #f4f4f4;
+            background-color: #f8f9fa;
         }
-
         header {
-            background-color: #333;
+            background-color: #1a1a1a;
+            color: white;
+            text-align: center;
+            padding: 20px 10px;
+        }
+        header h1 {
+            margin: 0;
+            font-size: 2.5rem;
+        }
+        header p {
+            font-size: 1rem;
+            margin: 5px 0 0;
+        }
+        .promocao {
+            background-color: #ffcc00;
+            text-align: center;
+            padding: 20px;
+            margin: 20px 0;
+        }
+        .promocao h2 {
+            margin: 0;
+            font-size: 2rem;
+        }
+        .promocao p {
+            font-size: 1.2rem;
+        }
+        .cardapio {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 20px;
+            padding: 20px;
+        }
+        .pod-card {
+            background-color: white;
+            border: 1px solid #ddd;
+            border-radius: 10px;
+            text-align: center;
+            padding: 15px;
+            box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        }
+        .pod-card img {
+            width: 100px;
+            height: auto;
+            margin-bottom: 10px;
+        }
+        .pod-card h2 {
+            font-size: 1.5rem;
+            margin: 10px 0;
+        }
+        .pod-card p {
+            color: #555;
+            margin: 5px 0;
+        }
+        .pod-card a {
+            text-decoration: none;
+            background-color: #28a745;
+            color: white;
+            padding: 10px 15px;
+            border-radius: 5px;
+            display: inline-block;
+            margin-top: 10px;
+        }
+        footer {
+            background-color: #1a1a1a;
             color: white;
             text-align: center;
             padding: 15px;
         }
-
-        .nav-bar {
-            display: flex;
-            justify-content: center;
-            background-color: #444;
-            padding: 10px;
-        }
-
-        .nav-bar a {
-            color: white;
-            padding: 14px 20px;
+        footer a {
+            color: #17a2b8;
             text-decoration: none;
-            text-align: center;
-        }
-
-        .nav-bar a:hover {
-            background-color: #ddd;
-            color: black;
-        }
-
-        .promo-banner {
-            background-color: #ff6347;
-            color: white;
-            padding: 10px;
-            text-align: center;
-            font-size: 20px;
-        }
-
-        .cardapio {
-            display: grid;
-            grid-template-columns: repeat(auto-fill, minmax(200px, 1fr));
-            gap: 20px;
-            padding: 20px;
-        }
-
-        .produto {
-            background-color: white;
-            border-radius: 10px;
-            box-shadow: 0 4px 6px rgba(0, 0, 0, 0.1);
-            text-align: center;
-            padding: 20px;
-        }
-
-        .produto img {
-            width: 100%;
-            border-radius: 10px;
-        }
-
-        .produto h3 {
-            margin: 10px 0;
-        }
-
-        .produto p {
-            font-size: 18px;
-            color: #555;
-        }
-
-        .botao-comprar {
-            background-color: #ff6347;
-            color: white;
-            padding: 10px;
-            border: none;
-            border-radius: 5px;
-            cursor: pointer;
-        }
-
-        .botao-comprar:hover {
-            background-color: #e55342;
-        }
-
-        .contato {
-            text-align: center;
-            padding: 20px;
-            background-color: #333;
-            color: white;
-        }
-
-        .contato a {
-            color: white;
-            text-decoration: none;
-            padding: 10px 20px;
-            background-color: #25d366;
-            border-radius: 5px;
-        }
-
-        .contato a:hover {
-            background-color: #128c7e;
-        }
-
-        .instagram-link {
-            margin-top: 20px;
         }
     </style>
 </head>
@@ -116,90 +90,39 @@
 
 <header>
     <h1>Snoop Pods</h1>
-    <p>Melhores preços, melhores pods!</p>
+    <p>Os melhores pods pelos melhores preços!</p>
 </header>
 
-<div class="nav-bar">
-    <a href="#">Home</a>
-    <a href="#">Cardápio</a>
-    <a href="#">Promoções</a>
-    <a href="#">Contato</a>
-</div>
+<section class="promocao">
+    <h2>Promoção Especial: Leve 3, Pague 2!</h2>
+    <p>Compre 3 unidades de qualquer produto e pague apenas 2! Aproveite agora!</p>
+</section>
 
-<div class="promo-banner">
-    <p>Promoção do Dia: Leve 3, pague 2!</p>
-</div>
-
-<div class="cardapio">
-    <!-- Pod Igniti V50 -->
-    <div class="produto">
-        <img src="pod-image.jpg" alt="Igniti V50">
-        <h3>Igniti V50 - Sabores:</h3>
-        <ul>
-            <li>Menta - R$ 55,00 <span style="text-decoration: line-through;">R$ 80,00</span></li>
-            <li>Framboesa - R$ 55,00 <span style="text-decoration: line-through;">R$ 80,00</span></li>
-            <li>Manga - R$ 55,00 <span style="text-decoration: line-through;">R$ 80,00</span></li>
-        </ul>
-        <button class="botao-comprar">Comprar Agora</button>
+<section class="cardapio">
+    <!-- Modelo 1 -->
+    <div class="pod-card">
+        <img src="https://via.placeholder.com/100" alt="Igniti V50">
+        <h2>Igniti V50</h2>
+        <p><s>R$ 55,00</s> <strong>R$ 36,67</strong></p>
+        <a href="https://wa.me/5511989932945?text=Quero+comprar+o+Igniti+V50!">Comprar pelo WhatsApp</a>
     </div>
-
-    <!-- Pod THC 1 -->
-    <div class="produto">
-        <img src="pod-image.jpg" alt="Pod THC 1">
-        <h3>Pod THC 1 - Sabores:</h3>
-        <ul>
-            <li>Original - R$ 120,00 <span style="text-decoration: line-through;">R$ 150,00</span></li>
-            <li>Melancia - R$ 120,00 <span style="text-decoration: line-through;">R$ 150,00</span></li>
-            <li>Uva - R$ 120,00 <span style="text-decoration: line-through;">R$ 150,00</span></li>
-        </ul>
-        <button class="botao-comprar">Comprar Agora</button>
+    <!-- Modelo 2 -->
+    <div class="pod-card">
+        <img src="https://via.placeholder.com/100" alt="Elf Bar 5000">
+        <h2>Elf Bar 5000</h2>
+        <p><s>R$ 65,00</s> <strong>R$ 43,33</strong></p>
+        <a href="https://wa.me/5511989932945?text=Quero+comprar+o+Elf+Bar+5000!">Comprar pelo WhatsApp</a>
     </div>
-
-    <!-- Pod THC 2 -->
-    <div class="produto">
-        <img src="pod-image.jpg" alt="Pod THC 2">
-        <h3>Pod THC 2 - Sabores:</h3>
-        <ul>
-            <li>Indica - R$ 120,00 <span style="text-decoration: line-through;">R$ 150,00</span></li>
-            <li>Sativa - R$ 120,00 <span style="text-decoration: line-through;">R$ 150,00</span></li>
-            <li>Blueberry - R$ 120,00 <span style="text-decoration: line-through;">R$ 150,00</span></li>
-        </ul>
-        <button class="botao-comprar">Comprar Agora</button>
+    <!-- Modelo 3 -->
+    <div class="pod-card">
+        <img src="https://via.placeholder.com/100" alt="Geek Bar S600">
+        <h2>Geek Bar S600</h2>
+        <p><s>R$ 70,00</s> <strong>R$ 46,67</strong></p>
+        <a href="https://wa.me/5511989932945?text=Quero+comprar+o+Geek+Bar+S600!">Comprar pelo WhatsApp</a>
     </div>
+    <!-- Adicione mais modelos aqui -->
+</section>
 
-    <!-- Pod X -->
-    <div class="produto">
-        <img src="pod-image.jpg" alt="Pod X">
-        <h3>Pod X - Sabores:</h3>
-        <ul>
-            <li>Limão - R$ 40,00 <span style="text-decoration: line-through;">R$ 60,00</span></li>
-            <li>Coco - R$ 40,00 <span style="text-decoration: line-through;">R$ 60,00</span></li>
-            <li>Melancia - R$ 40,00 <span style="text-decoration: line-through;">R$ 60,00</span></li>
-        </ul>
-        <button class="botao-comprar">Comprar Agora</button>
-    </div>
-
-    <!-- Pod Y -->
-    <div class="produto">
-        <img src="pod-image.jpg" alt="Pod Y">
-        <h3>Pod Y - Sabores:</h3>
-        <ul>
-            <li>Abacaxi - R$ 45,00 <span style="text-decoration: line-through;">R$ 70,00</span></li>
-            <li>Groselha - R$ 45,00 <span style="text-decoration: line-through;">R$ 70,00</span></li>
-            <li>Morango - R$ 45,00 <span style="text-decoration: line-through;">R$ 70,00</span></li>
-        </ul>
-        <button class="botao-comprar">Comprar Agora</button>
-    </div>
-</div>
-
-<div class="contato">
-    <p>Tem dúvidas? <strong>Chame a gente no WhatsApp!</strong></p>
-    <a href="https://wa.me/5511989932945" target="_blank">Clique para chamar no WhatsApp</a>
-
-    <div class="instagram-link">
-        <p>Siga-nos no Instagram: <a href="https://www.instagram.com/snoop._pods" target="_blank">@snoop._pods</a></p>
-    </div>
-</div>
-
-</body>
-</html>
+<footer>
+    <p>Chame a gente no WhatsApp: <a href="https://wa.me/5511989932945">+55 11 98993-2945</a></p>
+    <p>Siga nosso Instagram: <a href="https://instagram.com/snoop._pods">@snoop._pods</a39
