--- a/index.html
+++ b/index.html
@@ -3,65 +3,95 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Snoop Pods - Vendas de Pods</title>
-    <!-- Link para o arquivo CSS -->
+    <title>Cardápio de Pods</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-    <!-- Cabeçalho do site -->
     <header>
-        <div class="logo">
-            <h1>Snoop Pods</h1>
-            <p>Vendas de Pods - Entrega rápida</p>
-        </div>
+        <h1>POD’S DA ✔BLACK FRIDAY✔</h1>
+        <p>Aproveite até o dia 25/11 😱</p>
     </header>
 
-    <!-- Barra de navegação (pode ser melhorada depois) -->
-    <nav>
-        <ul>
-            <li><a href="#home">Home</a></li>
-            <li><a href="#produtos">Produtos</a></li>
-            <li><a href="#contato">Contato</a></li>
-        </ul>
-    </nav>
-
-    <!-- Seção de Produtos -->
-    <section id="produtos">
-        <h2>Escolha seus Pods</h2>
-        <div class="produtos-lista">
-            <!-- Produto 1 -->
-            <div class="produto">
-                <img src="img/pod1.jpg" alt="Pod 1">
-                <h3>Pod Ignite V50</h3>
-                <p>Preço: R$ 55,00</p>
-            </div>
-            <!-- Produto 2 -->
-            <div class="produto">
-                <img src="img/pod2.jpg" alt="Pod 2">
-                <h3>Pod Breeze Plus</h3>
-                <p>Preço: R$ 50,00</p>
-            </div>
-            <!-- Produto 3 -->
-            <div class="produto">
-                <img src="img/pod3.jpg" alt="Pod 3">
-                <h3>Pod Stig 3000</h3>
-                <p>Preço: R$ 45,00</p>
-            </div>
-            <!-- Adicione mais produtos aqui -->
+    <section id="pod-menu">
+        <div class="card">
+            <h2>KIT ELFBAR EW</h2>
+            <p><strong>Bateria:</strong> R$70,00</p>
+            <p><strong>Cartucho 16k:</strong> R$85,00</p>
+            <ul>
+                <li>Morango gelado</li>
+                <li>Sorvete americano</li>
+                <li>Maçã verde</li>
+            </ul>
+            <p><strong>Cartucho 9k e bateria:</strong> R$90,00</p>
+            <ul>
+                <li>Menta</li>
+                <li>Cereja gelada</li>
+                <li>Uva gelada</li>
+                <li>Melancia gelada</li>
+            </ul>
         </div>
+
+        <div class="card">
+            <h2>IGNITE V15 (1.500)</h2>
+            <p><strong>Preço:</strong> R$35,00</p>
+            <ul>
+                <li>Cereja gelada</li>
+                <li>Pêssego</li>
+                <li>Sorvete de morango</li>
+                <li>Framboesa e laranja gelada</li>
+                <li>Morango e goiaba</li>
+                <li>Morango maçã e melancia</li>
+                <li>Maçã verde, pêssego e kiwi</li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h2>YUOTO 3.500</h2>
+            <p><strong>Preço:</strong> R$35,00</p>
+            <ul>
+                <li>Coca gelado</li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h2>ELFBAR 6.000</h2>
+            <p><strong>Preço:</strong> R$50,00 (Sem garantia❌)</p>
+            <ul>
+                <li>Abacaxi manga e laranja</li>
+                <li>Morango e banana</li>
+                <li>Suco de pêssego</li>
+                <li>Blueberry</li>
+                <li>Mirtilo framboesa e limão</li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h2>VAPESOUL 6.500</h2>
+            <p><strong>Preço:</strong> R$55,00</p>
+            <ul>
+                <li>Menta</li>
+                <li>Love 66</li>
+                <li>Uva</li>
+            </ul>
+        </div>
+
+        <div class="card">
+            <h2>BRIGENIUS 8.000</h2>
+            <p><strong>Preço:</strong> R$60,00</p>
+            <ul>
+                <li>Menta</li>
+                <li>Blueberry</li>
+            </ul>
+        </div>
+
+        <!-- Continue inserindo os outros pods de acordo com a mesma estrutura -->
+        
     </section>
 
-    <!-- Seção de Contato -->
-    <section id="contato">
-        <h2>Contato</h2>
-        <p>Telefone: <a href="tel:+55-11-989932945">+55 11 989932945</a></p>
-        <p>Instagram: <a href="https://instagram.com/snoop._pods" target="_blank">@snoop._pods</a></p>
-        <p><a href="https://wa.me/5511989932945" target="_blank">Chame no WhatsApp</a></p>
-    </section>
-
-    <!-- Rodapé -->
     <footer>
-        <p>&copy; 2025 Snoop Pods. Todos os direitos reservados.</p>
+        <p>🚨FAÇA SEU PEDIDO🚨</p>
+        <p>Tel: <strong>11 91035-6908</strong></p>
+        <p>Instagram: <strong>@Crazypodsa01</strong></p>
     </footer>
 </body>
 </html>
