--- a/index.html
+++ b/index.html
@@ -3,95 +3,78 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Cardápio de Pods</title>
+    <title>Snoop Pods</title>
     <link rel="stylesheet" href="styles.css">
 </head>
 <body>
     <header>
-        <h1>POD’S DA ✔BLACK FRIDAY✔</h1>
-        <p>Aproveite até o dia 25/11 😱</p>
+        <div class="header-container">
+            <h1>Snoop Pods</h1>
+            <p>Os melhores pods pelos melhores preços!</p>
+            <a href="https://wa.me/5511989932945" class="cta-button">Chamar no WhatsApp</a>
+        </div>
     </header>
 
-    <section id="pod-menu">
-        <div class="card">
-            <h2>KIT ELFBAR EW</h2>
-            <p><strong>Bateria:</strong> R$70,00</p>
-            <p><strong>Cartucho 16k:</strong> R$85,00</p>
-            <ul>
-                <li>Morango gelado</li>
-                <li>Sorvete americano</li>
-                <li>Maçã verde</li>
-            </ul>
-            <p><strong>Cartucho 9k e bateria:</strong> R$90,00</p>
-            <ul>
-                <li>Menta</li>
-                <li>Cereja gelada</li>
-                <li>Uva gelada</li>
-                <li>Melancia gelada</li>
-            </ul>
-        </div>
+    <nav>
+        <ul>
+            <li><a href="#kits">Kits</a></li>
+            <li><a href="#ignites">Ignites</a></li>
+            <li><a href="#elfbar">Elfbar</a></li>
+            <li><a href="#vapesoul">Vapesoul</a></li>
+        </ul>
+    </nav>
 
-        <div class="card">
-            <h2>IGNITE V15 (1.500)</h2>
-            <p><strong>Preço:</strong> R$35,00</p>
-            <ul>
-                <li>Cereja gelada</li>
-                <li>Pêssego</li>
-                <li>Sorvete de morango</li>
-                <li>Framboesa e laranja gelada</li>
-                <li>Morango e goiaba</li>
-                <li>Morango maçã e melancia</li>
-                <li>Maçã verde, pêssego e kiwi</li>
-            </ul>
-        </div>
+    <main>
+        <section id="kits">
+            <h2>Kits Disponíveis</h2>
+            <div class="product">
+                <img src="https://via.placeholder.com/200" alt="Kit Elfbar EW">
+                <h3>Kit Elfbar EW</h3>
+                <p><strong>Preço:</strong> R$70,00 (bateria) | R$85,00 (cartucho)</p>
+                <p><strong>Sabores:</strong> Morango gelado, Sorvete americano, Maçã verde</p>
+            </div>
+            <div class="product">
+                <img src="https://via.placeholder.com/200" alt="Kit Elfbar 9k">
+                <h3>Kit Elfbar 9k</h3>
+                <p><strong>Preço:</strong> R$90,00</p>
+                <p><strong>Sabores:</strong> Menta, Cereja gelada, Uva gelada, Melancia gelada</p>
+            </div>
+        </section>
 
-        <div class="card">
-            <h2>YUOTO 3.500</h2>
-            <p><strong>Preço:</strong> R$35,00</p>
-            <ul>
-                <li>Coca gelado</li>
-            </ul>
-        </div>
+        <section id="ignites">
+            <h2>Ignites</h2>
+            <div class="product">
+                <img src="https://via.placeholder.com/200" alt="Ignite V15">
+                <h3>Ignite V15</h3>
+                <p><strong>Preço:</strong> R$35,00</p>
+                <p><strong>Sabores:</strong> Cereja gelada, Pêssego, Sorvete de morango, Framboesa e laranja gelada</p>
+            </div>
+        </section>
 
-        <div class="card">
-            <h2>ELFBAR 6.000</h2>
-            <p><strong>Preço:</strong> R$50,00 (Sem garantia❌)</p>
-            <ul>
-                <li>Abacaxi manga e laranja</li>
-                <li>Morango e banana</li>
-                <li>Suco de pêssego</li>
-                <li>Blueberry</li>
-                <li>Mirtilo framboesa e limão</li>
-            </ul>
-        </div>
+        <section id="elfbar">
+            <h2>Elfbar</h2>
+            <div class="product">
+                <img src="https://via.placeholder.com/200" alt="Elfbar 6.000">
+                <h3>Elfbar 6.000</h3>
+                <p><strong>Preço:</strong> R$50,00</p>
+                <p><strong>Sabores:</strong> Abacaxi manga e laranja, Morango e banana, Suco de pêssego</p>
+            </div>
+        </section>
 
-        <div class="card">
-            <h2>VAPESOUL 6.500</h2>
-            <p><strong>Preço:</strong> R$55,00</p>
-            <ul>
-                <li>Menta</li>
-                <li>Love 66</li>
-                <li>Uva</li>
-            </ul>
-        </div>
-
-        <div class="card">
-            <h2>BRIGENIUS 8.000</h2>
-            <p><strong>Preço:</strong> R$60,00</p>
-            <ul>
-                <li>Menta</li>
-                <li>Blueberry</li>
-            </ul>
-        </div>
-
-        <!-- Continue inserindo os outros pods de acordo com a mesma estrutura -->
-        
-    </section>
+        <section id="vapesoul">
+            <h2>Vapesoul</h2>
+            <div class="product">
+                <img src="https://via.placeholder.com/200" alt="Vapesoul 6.500">
+                <h3>Vapesoul 6.500</h3>
+                <p><strong>Preço:</strong> R$55,00</p>
+                <p><strong>Sabores:</strong> Menta, Love 66, Uva</p>
+            </div>
+        </section>
+    </main>
 
     <footer>
-        <p>🚨FAÇA SEU PEDIDO🚨</p>
-        <p>Tel: <strong>11 91035-6908</strong></p>
-        <p>Instagram: <strong>@Crazypodsa01</strong></p>
+        <p>📞 Contato: +55 11 98993-2945</p>
+        <p>📷 Instagram: <a href="https://instagram.com/snoop._pods" target="_blank">@snoop._pods</a></p>
     </footer>
 </body>
 </html>
