--- a/index.html
+++ b/index.html
@@ -18,6 +18,8 @@
             <li><a href="#elfbar">Elfbar</a></li>
             <li><a href="#ignite">Ignite</a></li>
             <li><a href="#vaporesso">Vaporesso</a></li>
+            <li><a href="#yuoto">Yuoto</a></li>
+            <li><a href="#lostmary">Lost Mary</a></li>
         </ul>
     </nav>
 
@@ -72,10 +74,50 @@
                 <button class="buy-button" data-pix="11989932945">Comprar</button>
             </div>
         </section>
+
+        <!-- Yuoto Section -->
+        <section id="yuoto" class="product-section">
+            <h2>Yuoto</h2>
+            <div class="product">
+                <img src="yuoto1.jpg" alt="Yuoto 3500">
+                <h3>Yuoto 3500</h3>
+                <p>R$35,00</p>
+                <button class="buy-button" data-pix="11989932945">Comprar</button>
+            </div>
+            <div class="product">
+                <img src="yuoto2.jpg" alt="Yuoto 10000">
+                <h3>Yuoto 10000</h3>
+                <p>R$85,00</p>
+                <button class="buy-button" data-pix="11989932945">Comprar</button>
+            </div>
+        </section>
+
+        <!-- Lost Mary Section -->
+        <section id="lostmary" class="product-section">
+            <h2>Lost Mary</h2>
+            <div class="product">
+                <img src="lostmary1.jpg" alt="Lost Mary 15000">
+                <h3>Lost Mary 15000</h3>
+                <p>R$85,00</p>
+                <button class="buy-button" data-pix="11989932945">Comprar</button>
+            </div>
+            <div class="product">
+                <img src="lostmary2.jpg" alt="Lost Mary 20000">
+                <h3>Lost Mary 20000</h3>
+                <p>R$95,00</p>
+                <button class="buy-button" data-pix="11989932945">Comprar</button>
+            </div>
+        </section>
     </main>
 
     <footer>
         <p>&copy; 2025 Snoop Pods. Todos os direitos reservados.</p>
+        <div class="payment-methods">
+            <img src="visa.png" alt="Visa">
+            <img src="mastercard.png" alt="MasterCard">
+            <img src="pix.png" alt="Pix">
+            <img src="boleto.png" alt="Boleto">
+        </div>
     </footer>
 </body>
 </html>
